# NX-ScreenUploader

./: CMakeLists.txt  README.md  README_CN.md  config.ini  config.json  devkita64-libnx.cmake  toolbox.json
cmake/: clang-dev-tools.cmake  options.cmake
scripts/: build.sh  release.sh  upload.sh
src/: config.cpp  config.hpp  logger.hpp  main.cpp  project.h  upload.cpp  upload.hpp  utils.cpp  utils.hpp
